--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
           <a class="link" href="/task-08.html">Домашнее задание 08</a>
         </li>
       </ul>
+
+      <figure>
+        <source src="myAudio.mp3" type="audio/mpeg">
+        <source src="myAudio.ogg" type="audio/ogg">
+        <!-- <audio
+            controls
+            src="/media/cc0-audio/t-rex-roar.mp3">
+                Your browser does not support the
+                <code>audio</code> element.
+        </audio> -->
+    </figure>
+            <script src="./js/audio.js"></script>
 </body>
 
 </html>
