--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 <body>
     <ul>
     <li>
-          <a class="link" href="/task-01.html">Домашнее задание 01</a>
+          <a class="link" href="./task-01.html">Домашнее задание 01</a>
         </li>
         <li>
-          <a class="link" href="/task-02.html">Домашнее задание 02</a>
+          <a class="link" href="./task-02.html">Домашнее задание 02</a>
         </li>
         <li>
-          <a class="link" href="/task-03.html">Домашнее задание 03</a>
+          <a class="link" href="./task-03.html">Домашнее задание 03</a>
         </li>
         <li>
-          <a class="link" href="/task-04.html">Домашнее задание 04</a>
+          <a class="link" href="./task-04.html">Домашнее задание 04</a>
         </li>
         <li>
-          <a class="link" href="/task-05.html">Домашнее задание 05</a>
+          <a class="link" href="./task-05.html">Домашнее задание 05</a>
         </li>
         <li>
-          <a class="link" href="/task-06.html">Домашнее задание 06</a>
+          <a class="link" href="./task-06.html">Домашнее задание 06</a>
         </li>
         <li>
-          <a class="link" href="/task-07.html">Домашнее задание 07</a>
+          <a class="link" href="./task-07.html">Домашнее задание 07</a>
         </li>
         <li>
-          <a class="link" href="/task-08.html">Домашнее задание 08</a>
+          <a class="link" href="./task-08.html">Домашнее задание 08</a>
         </li>
       </ul>
 
